EKS images/3-tier-app/k8s/k8s/sonarqube-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube-postgres
  namespace: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarqube-postgres
  template:
    metadata:
      labels:
        app: sonarqube-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: jenkins
spec:
  selector:
    app: sonarqube-postgres
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
